Latihan Program Android

--- a/app/src/main/res/layout/activity_frame_layout.xml
+++ b/app/src/main/res/layout/activity_frame_layout.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.andra.latihanku.FrameLayout">
 
-</RelativeLayout>
+    <!-- Green Background -->
+    <TextView
+        android:background="#ff00ff00"
+        android:gravity="bottom"
+        android:id="@+id/textView1"
+        android:layout_height="200dp"
+        android:layout_width="200dp"
+        android:text="Contoh Text Satu"
+        />
+
+    <!-- BLUE Background -->
+    <TextView
+        android:background="#ff0004ff"
+        android:gravity="bottom"
+        android:id="@+id/textView2"
+        android:layout_height="148dp"
+        android:layout_width="127dp"
+        android:text="Contoh Text Dua"
+
+        android:layout_gravity="left|top" />
+
+</FrameLayout>
