--- a/app/src/main/res/drawable/vertical_scrollview_line.xml
+++ b/app/src/main/res/drawable/vertical_scrollview_line.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#f8bbc4bf" />
+    <size android:width="5dp" />
+    <corners android:radius="10dp" />
+</shape>
