--- a/app/src/main/res/layout/activity_icon_and_text_button.xml
+++ b/app/src/main/res/layout/activity_icon_and_text_button.xml
@@ -1,13 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.andra.latihanku.IconAndTextButton">
+    android:orientation="horizontal"
+    >
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="22dp"
+            android:background="#4CAF50"
+            android:drawableLeft="@drawable/ic_create_black_24dp"
+            android:padding="16dp"
+            android:text="Button (Icon Kiri)"/>
+
+        <Button
+            android:id="@+id/button3"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="148dp"
+            android:layout_margin="16dp"
+            android:drawableBottom="@drawable/ic_create_black_24dp"
+            android:padding="16dp"
+            android:text="Button (Icon Bawah)"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+
+        <Button
+            android:id="@+id/button5"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="118dp"
+            android:layout_margin="16dp"
+            android:background="#CDDC39"
+            android:drawableTop="@drawable/ic_create_black_24dp"
+            android:padding="24dp"
+            android:text="Button (Icon Atas)"
+            />
+
+        <Button
+            android:id="@+id/button6"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="114dp"
+            android:layout_margin="16dp"
+            android:layout_weight="0.32"
+            android:drawableRight="@drawable/ic_create_black_24dp"
+            android:paddingBottom="16dp"
+            android:text="Button (Icon Kanan)"/>
+
+    </LinearLayout>
+
+</LinearLayout>
+
+
