--- a/app/src/main/res/layout/activity_scroll_view_layout.xml
+++ b/app/src/main/res/layout/activity_scroll_view_layout.xml
@@ -1,13 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.andra.latihanku.ScrollViewLayout">
+    android:layout_height="match_parent">
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="16dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:padding="10dp"
+            android:text="Contoh Android ScrollView"
+            android:textStyle="bold" />
+
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+        <Button android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Contoh Android ScrollView" />
+    </LinearLayout>
+
+</ScrollView>
+
+
